sumo/tests/traci/ChangeLane/InvalidNode/testclient_out.traci
TraCITestClient output file. Date: Tue Mar 10 14:57:06 2009


-> Command sent: <SimulationStep>:
  TargetTime=1.00 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1.00 2D-Position: x=0.00 y=495.05

-> Command sent: <ChangeLane>:
  NodeId=1 LaneId=0 fixTime=1.00
.. Answered with error to command (19), [description: Can not retrieve node with given ID]

-> Command sent: <SimulationStep>:
  TargetTime=1.00 PosFormat=1
.. Command acknowledged (1), [description: ]
.. Received Response <MoveNode>:
  nodeId=0 targetTime=1.00 2D-Position: x=0.80 y=495.05

-> Command sent: <Close>:
.. Command acknowledged (127), [description: Goodbye]
